# yankpass

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  notes.txt  workspace.kdl
include/: test.h
src/: cli.rs  crypto.rs  crypto_test.rs  discord.rs  main.rs  test.cc
