[package]
name = "yankpass"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpassword = "5.0"
openssl = "0.10" # apt install libssl-dev pkg-config openssl
serenity = "0.10"
structopt = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
enigo = { version = "0", optional = true } # "pacman -S xdotool" "apt install libxdo-dev"
