[package]
name = "yankpass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpassword = "7.2.0"
openssl = "0.10" # apt install libssl-dev pkg-config openssl
tokio = { version = "1", features = ["rt-multi-thread", "time", "full"] }
anyhow = "1.0"
firebase-rs = "2.0.8"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
cxx = "1.0.104"
clap = { version = "4.3.21", features = ["derive"] }
dirs = "5.0.1"
shellexpand = "3.1.0"
toml = "0.7.6"
derivative = "2.2.0"
rtoolbox = { version = "0.0.1", features = ["serde"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
enigo = "0" # pacman -S xdotool

[build-dependencies]
cxx-build = "1.0.104"
